# riot-items-tfm2

./: .gitignore  Cargo.toml  GOLD_EFFICIENCY.md  LICENSE  README.md  apply_config.bat  apply_config.ps1  config-default.json  config.json  item-build-data-reference.txt  item-build-editor.bat  item-build-editor.ps1  item-builds-default.json  item-builds-example.json  item-builds.example.json  item-builds.json  mod-settings.json  mod.mod_info  mod.override_info  mod.workshop_id  preview.xcf  test.md  workshop_desc.md
aseprite_resources/ingame/: item_icons_640X640#data.sprite_sheet  item_icons_640X640#sheet.xcf  radiant_border.xcf
src/: aegis_of_the_legion.rs  ardent_censer.rs  bandleglass_mirror.rs  bf_sword.rs  black_cleaver.rs  blackfire_torch.rs  blade_of_the_ruined_king.rs  bloodletters_curse.rs  build_config.rs  collector.rs  config.rs  constants.rs  deathblade.rs  deaths_dance.rs  diamond_tipped_spear.rs  echoes_of_helia.rs  executioners_calling.rs  experimental_hexplate.rs  frozen_mallet.rs  guinsoos_rageblade.rs  haunting_guise.rs  heartsteel.rs  hextech_gunblade.rs  hook.rs  infinity_edge.rs  jaksho_the_protean.rs  liandrys_torment.rs  lib.rs  mirage_blade.rs  morellonomicon.rs  mortal_reminder.rs  nashors_tooth.rs  needlessly_large_rod.rs  night_harvester.rs  noonquiver.rs  oblivion_orb.rs  overlords_bloodmail.rs  phage.rs  protectors_vow.rs  protoplasm_harness.rs  (+18 more)
src/items/: atmas_reckoning.rs  bandleglass_mirror.rs  bastionbreaker.rs  blackfire_torch.rs  blighting_jewel.rs  bloodsong.rs  collector.rs  deathblade.rs  deaths_dance.rs  mod.rs  (+37 more)
text/: item.i18n
(+1 files in other folders)
