[package]
name = "riot_items_tfm2"
version = "0.2.8"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# Add external crates here. Do not add mod-api here; the SDK/uploader
# injects the matching prebuilt mod_api crate during the build.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
